// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model with description and technology 1`] = `
{
  "elements": {
    "client": {
      "color": "primary",
      "description": null,
      "id": "client",
      "kind": "user",
      "shape": "person",
      "tags": [],
      "technology": null,
      "title": "client",
    },
    "system": {
      "color": "primary",
      "description": null,
      "id": "system",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "color": "secondary",
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": "NodeJS",
      "title": "Backend",
    },
    "system.frontend": {
      "color": "muted",
      "description": "Frontend description",
      "id": "system.frontend",
      "kind": "component",
      "shape": "browser",
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
  },
  "relations": {
    "171cae8ab349b2ef3f3d40f23c7a7fa2d46a2b23": {
      "id": "171cae8ab349b2ef3f3d40f23c7a7fa2d46a2b23",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
    "6f3533077304f2e812d6c9cfdb6be977e23efe3d": {
      "id": "6f3533077304f2e812d6c9cfdb6be977e23efe3d",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
  },
  "views": {},
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "elements": {
    "client": {
      "color": "primary",
      "description": null,
      "id": "client",
      "kind": "user",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "client",
    },
    "system": {
      "color": "primary",
      "description": null,
      "id": "system",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "color": "primary",
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "backend",
    },
    "system.backend.api": {
      "color": "primary",
      "description": null,
      "id": "system.backend.api",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "api",
    },
    "system.frontend": {
      "color": "primary",
      "description": null,
      "id": "system.frontend",
      "kind": "component",
      "shape": "rectangle",
      "tags": [],
      "technology": null,
      "title": "frontend",
    },
  },
  "relations": {
    "671e3db5eb605d5f245f247d95925bd0953e0e4c": {
      "id": "671e3db5eb605d5f245f247d95925bd0953e0e4c",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "requests",
    },
    "99bffdfd5c78e024393e6223cd9b19225321a5e3": {
      "id": "99bffdfd5c78e024393e6223cd9b19225321a5e3",
      "source": "client",
      "target": "system.frontend",
      "title": "opens",
    },
  },
  "views": {
    "74f5364fa4b064ce9830043b93d4cc6fce9d85b0": {
      "autoLayout": "TB",
      "edges": [
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "parent": null,
          "relations": [
            "671e3db5eb605d5f245f247d95925bd0953e0e4c",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
        {
          "id": "client:system.frontend",
          "label": "opens",
          "parent": null,
          "relations": [
            "99bffdfd5c78e024393e6223cd9b19225321a5e3",
          ],
          "source": "client",
          "target": "system.frontend",
        },
      ],
      "id": "74f5364fa4b064ce9830043b93d4cc6fce9d85b0",
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "kind": "user",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "kind": "component",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend",
          "kind": "component",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "backend",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "title": "frontend",
      "viewOf": "system.frontend",
    },
    "index": {
      "autoLayout": "TB",
      "edges": [
        {
          "id": "client:system",
          "label": "opens",
          "parent": null,
          "relations": [
            "99bffdfd5c78e024393e6223cd9b19225321a5e3",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "id": "index",
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "kind": "user",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "kind": "component",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "system",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
      ],
      "title": "Index",
    },
    "v1": {
      "autoLayout": "LR",
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "parent": null,
          "relations": [
            "671e3db5eb605d5f245f247d95925bd0953e0e4c",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "id": "v1",
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "kind": "component",
          "navigateTo": "74f5364fa4b064ce9830043b93d4cc6fce9d85b0",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend.api",
          "kind": "component",
          "parent": null,
          "shape": "rectangle",
          "tags": [],
          "technology": null,
          "title": "api",
        },
      ],
      "rules": [
        {
          "exprs": [
            {
              "wildcard": true,
            },
          ],
          "isInclude": true,
        },
        {
          "autoLayout": "LR",
        },
      ],
      "title": "api",
      "viewOf": "system.backend.api",
    },
  },
}
`;
